# orchestra-ide

./: .gitignore  Cargo.toml  README.md
crates/orchestra-core/: Cargo.toml
crates/orchestra-core/src/: error.rs  events.rs  integrations.rs  lib.rs  llm.rs  markdown_skill.rs  memory.rs  orchestration.rs  runtime.rs  scaffold.rs  skills.rs
crates/orchestra-core/src/model/: config.rs  mod.rs  project_type.rs  skill_id.rs  space.rs
crates/orchestra-tui/: Cargo.toml
crates/orchestra-tui/src/: app.rs  dashboard.rs  editor.rs  main.rs  markdown.rs  wizard.rs
docs/: ARCHITECTURE.md  FONCTIONNEL.md  JOURNAL.md
examples/recherche-immo-aix/.orchestra/: config.json  persona.md
examples/recherche-immo-aix/.orchestra/skills/Synthese_Annonces/: SKILL.md
space-test/: README.md
space-test/.orchestra/: config.json  persona.md
space-test/docs/: plan-apprentissage.md  progression.md
space-test/docs/diagrammes/: cycle-hebdomadaire.md  jalons-cnavt.md  parcours-apprentissage.md  priorites-grammaire.md  routine-quotidienne.md
