[workspace]
resolver = "2"
members = ["crates/orchestra-core", "crates/orchestra-tui"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
ratatui = "0.29"
tokio = "1"
futures = "0.3"
crossterm = "0.28"
