[package]
name = "orchestra-core"
description = "Cœur métier d'Orchestra IDE — aucune dépendance UI (port Tauri futur)."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
