[package]
name = "orchestra-tui"
description = "Frontend terminal (ratatui) d'Orchestra IDE — consomme orchestra-core."
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "orchestra"
path = "src/main.rs"

[dependencies]
orchestra-core = { path = "../orchestra-core" }
ratatui = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
futures = { workspace = true }
crossterm = { workspace = true, features = ["event-stream"] }
